--- a/style.css
+++ b/style.css
@@ -1,17 +1,58 @@
 @charset "utf-8";
 /* CSS Document */
 
-#headline{
-	color: red;
-	text-align: center;
-	font-size: -2;
+body{
+	font-family:Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana,' sans-serif';
 }
-#footer{
+.container{
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+}
+.container .head {
+	width: 100%;
+	height: 5%;
+	margin:auto;
+	padding-top: 7px;
+}
+.head .person-center *{
+	vertical-align: middle;
+	display: inline-block;
+}
+.head .person-center {
+	
+	height: 100%;
+	width: 820px;
+	margin: auto;
+	margin-left: 30px;
+	margin-top: 7px;
+	
+}
+.person-center .self-center{
+	margin:auto;
+	color: black;	
+}
+.person-center .perface{
+	height: 100%;
+	width: 150px;
+	margin-left:530px;
+	margin-top: 0px;
+	color: red;
+}
+.container .main{
+	height: 70%;
+}
+.container .footer{
+	height: 15%;
+	background-color: black;
+	margin-top: 10px;
+}
+.footer .footer-center{
 	position:fixed;
 	bottom:0px;
 	right: 700px;
 }
-#git{
+.footer .git{
 	position:fixed;
 	bottom: 10px;
 	right: 750px;
