--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 body{
 	font-family:Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana,' sans-serif';
 }
+*{
+	margin: auto;
+}
 .container{
 	width: 100%;
 	height: 100%;
@@ -41,10 +44,46 @@ body{
 }
 .main{
 	height: 70%;
+	width:100%;
+	display: table;
+}
+.main-info{
+	width: 800px;
+	height: 220px;
+	background-image:url(qingyuan.jpg);
+	border-radius: 15px 15px 0px 0px;
+	margin-top: 40px;
+}
+.avatar{
+	text-align: center;
+	padding-bottom: 15px;
+}
+.avatar img{
+	border-radius: 100%;
+	display: inline-block;
+	margin-top: 30px;
+}
+.nickname{
+	text-align: center;
+	color: white;
+	font-family: 微软雅黑;
+	font-size: 20px;
+	margin-top: 40px;
+	margin-left: 360px;
+}
+.skull{
+	border-radius: 100%;
+}
+.site-intro{
+	text-align: center;
+	color:black;
+	font-family: 微软雅黑;
+	font-size: 15px;
+	margin-top: 10px;
+	margin-bottom: 30px;
 }
 .footer{
 	height: 25%;
-	background: #090A0F;
 	margin-top: 10px;
 	display: flex;
 	flex-direction: row;
@@ -55,7 +94,6 @@ body{
 	margin-right: 50px;
 }
 .footer-left,.footer-center,.footer-right{
-	margin: auto;
 	margin-top: 10px;
 	color: white;
 	text-align: center;
@@ -68,7 +106,6 @@ body{
 	margin-right: 400px;
 }
 .footer-center .banquan{
-	margin: auto;
 	right: 700px;
-	color: white;
+	color: black;
 }
