--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body{
 	margin-top: 40px;
 	margin-left: 360px;
 }
-.skull{
+.male{
 	border-radius: 100%;
 }
 .site-intro{
@@ -81,6 +81,30 @@ body{
 	font-size: 15px;
 	margin-top: 10px;
 	margin-bottom: 30px;
+}
+.link{
+	width: 800px;
+	height: 40px;
+	background:black;
+	opacity: 0.5;
+	border-radius: 0px 0px 15px 15px;
+	text-align: center;
+}
+.link ul{
+	list-style: none;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	text-align: center;
+}
+.link ul li{
+	margin-bottom: 150px;
+	width: 200px;
+	height: 45px;
+	text-align: center;
+	line-height: 50px;
+	color: white;
+	font-family: 微软雅黑;
 }
 .footer{
 	height: 25%;
@@ -99,13 +123,15 @@ body{
 	text-align: center;
 }
 .github{
-	border-radius: 40px;
+	border-radius:100%;
 }
 .footer-right{
 	margin-left: 50px;
 	margin-right: 400px;
 }
 .footer-center .banquan{
-	right: 700px;
+	text-align: center;
 	color: black;
+	font-size: 15px;
+	margin-bottom: 120px;
 }
