--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body{
 	opacity: 0.5;
 	border-radius: 0px 0px 15px 15px;
 	text-align: center;
+	text-decoration:none;
 }
 .link ul{
 	list-style: none;
@@ -98,13 +99,43 @@ body{
 	text-align: center;
 }
 .link ul li{
-	margin-bottom: 150px;
 	width: 200px;
 	height: 45px;
 	text-align: center;
 	line-height: 50px;
 	color: white;
 	font-family: 微软雅黑;
+}
+.link ul li ul{
+	display: inline;
+	line-height: 24px;
+}
+.link ul li ul li {
+
+	float: none;
+	display: none;
+}
+
+a {
+	text-decoration: none;
+	text-align: center;
+}
+.link ul li:hover li {
+
+	display: block;
+
+}
+
+ul li a:hover {
+
+	background-color: #0CC;
+
+}
+
+ul li ul li a:hover {
+
+	background-color: #0CC;
+
 }
 .footer{
 	height: 25%;
